<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"><![CDATA[
    tools:context=".activity.InvoiceActivity">

    ]]>

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/dateEditText"
        android:inputType="date"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgViewParkingLot"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/txtViewHoursOfStay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hoursOfStayHint"
        android:inputType="time"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <ImageView
        android:id="@+id/imgViewParkingLot"
        android:layout_width="339dp"
        android:layout_height="296dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_parking_lot" />

    <Button
        android:id="@+id/btnGenerateInvoice"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/yellow_500"
        android:text="@string/generateInvoiceBtn"
        android:textColor="@color/gray_800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewHoursOfStay" />

    <Button
        android:id="@+id/backToProfileBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/yellow_500"
        android:text="@string/backProfile"
        android:textColor="@color/gray_800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGenerateInvoice"/>

    <Button
        android:id="@+id/checkPermissionsBtn"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:backgroundTint="@color/yellow_500"
        android:onClick="takePermissions"
        android:text="@string/checkPermissionsBtn"
        android:textColor="@color/gray_800"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>